# Proyecto3GCRaytracer

./: CMakeLists.txt  README.MD
scripts/: camera.cpp  color.h  cube.cpp  cube.h  imageLoader.h  main.cpp  object.h  raycaster.h  skybox.cpp
